--- a/src/main/resources/com/example/uaspbo_habittracker_27bulanmei/HabitTracker.fxml
+++ b/src/main/resources/com/example/uaspbo_habittracker_27bulanmei/HabitTracker.fxml
@@ -11,19 +11,19 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.uaspbo_habittracker_27bulanmei.controller.HabitTrackerController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="404.0" prefWidth="350.0" style="-fx-background-color: #e6f0f2;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.uaspbo_habittracker_27bulanmei.controller.HabitTrackerController">
     <top>
-        <VBox alignment="CENTER_LEFT" spacing="5.0" BorderPane.alignment="CENTER">
+        <VBox alignment="CENTER_LEFT" spacing="5.0" style="-fx-background-color: #e6f0f2;" BorderPane.alignment="CENTER">
             <children>
-                <Label fx:id="welcomeLabel" text="Selamat Datang, User!">
+                <Label fx:id="welcomeLabel" prefHeight="23.0" prefWidth="189.0" text="Selamat Datang, User!" textFill="#1e3d59">
                     <font>
                         <Font name="System Bold" size="18.0" />
                     </font>
                 </Label>
                 <HBox spacing="10.0">
                     <children>
-                        <TextField fx:id="habitInput" promptText="Masukkan kebiasaan baru..." HBox.hgrow="ALWAYS" />
-                        <Button onAction="#handleAddHabit" text="Tambah" />
+                        <TextField fx:id="habitInput" promptText="Masukkan kebiasaan baru..." style="-fx-background-radius: 15;" HBox.hgrow="ALWAYS" />
+                        <Button onAction="#handleAddHabit" style="-fx-background-radius: 15;" text="Tambah" textFill="#1e3d59" />
                     </children>
                 </HBox>
             </children>
@@ -33,17 +33,15 @@
         </VBox>
     </top>
     <center>
-        <HBox spacing="10.0" alignment="TOP_CENTER" BorderPane.alignment="CENTER">
-            <ScrollPane fitToWidth="true" hbarPolicy="NEVER" prefWidth="200.0">
+        <HBox alignment="TOP_CENTER" spacing="10.0" BorderPane.alignment="CENTER">
+            <ScrollPane fitToWidth="true" hbarPolicy="NEVER" prefHeight="260.0" prefWidth="163.0">
                 <content>
                     <VBox fx:id="habitDisplayBox" spacing="5.0" />
                 </content>
             </ScrollPane>
 
-            <VBox fx:id="achievementBox" spacing="5.0"
-                  style="-fx-background-color: #f4f4f4; -fx-padding: 10; -fx-border-color: #ccc; -fx-border-radius: 5;"
-                  prefWidth="120.0">
-                <Label text="🎯 Pencapaian Hari Ini" style="-fx-font-weight: bold;" />
+            <VBox fx:id="achievementBox" prefHeight="331.0" prefWidth="159.0" spacing="5.0" style="-fx-background-color: #5fa8af; -fx-padding: 10; -fx-background-radius: 15;">
+                <Label style="-fx-font-weight: bold;" text="🎯 Pencapaian Hari Ini" textFill="WHITE" />
                 <Label fx:id="achievementMessage" wrapText="true" />
             </VBox>
         </HBox>
@@ -51,8 +49,8 @@
     <bottom>
         <HBox alignment="CENTER_LEFT" spacing="10.0" BorderPane.alignment="CENTER">
             <children>
-                <Button onAction="#handleViewHistory" text="Lihat Riwayat" />
-                <Region HBox.hgrow="ALWAYS" /> <Button onAction="#handleLogout" text="Logout" textFill="RED" />
+                <Button onAction="#handleViewHistory" style="-fx-background-radius: 15;" text="Lihat Riwayat" textFill="#1e3d59" />
+                <Region HBox.hgrow="ALWAYS" /> <Button onAction="#handleLogout" style="-fx-background-radius: 15;" text="Logout" textFill="RED" />
             </children>
             <BorderPane.margin>
                 <Insets bottom="10.0" left="10.0" right="10.0" />
