--- a/src/main/resources/com/example/uaspbo_habittracker_27bulanmei/HistoryView.fxml
+++ b/src/main/resources/com/example/uaspbo_habittracker_27bulanmei/HistoryView.fxml
@@ -10,20 +10,20 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.uaspbo_habittracker_27bulanmei.controller.HistoryController">
+<BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.uaspbo_habittracker_27bulanmei.controller.HistoryController">
     <top>
-        <VBox alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
+        <VBox alignment="CENTER" spacing="10.0" style="-fx-background-color: #1e3d59;" BorderPane.alignment="CENTER">
             <children>
-                <Label text="Riwayat Kebiasaan">
+                <Label text="Riwayat Kebiasaan" textFill="WHITE">
                     <font><Font name="System Bold" size="24.0" /></font>
                 </Label>
                 <HBox alignment="CENTER" spacing="20.0">
                     <children>
-                        <Button mnemonicParsing="false" onAction="#handlePreviousMonth" text="&lt; Bulan Lalu" />
-                        <Label fx:id="monthYearLabel" text="Juni 2025">
+                        <Button mnemonicParsing="false" onAction="#handlePreviousMonth" style="-fx-background-radius: 15;" text="&lt; Bulan Lalu" />
+                        <Label fx:id="monthYearLabel" text="Juni 2025" textFill="WHITE">
                             <font><Font name="System Bold" size="18.0" /></font>
                         </Label>
-                        <Button mnemonicParsing="false" onAction="#handleNextMonth" text="Bulan Depan &gt;" />
+                        <Button mnemonicParsing="false" onAction="#handleNextMonth" style="-fx-background-radius: 15;" text="Bulan Depan &gt;" />
                     </children>
                 </HBox>
             </children>
@@ -31,24 +31,24 @@
         </VBox>
     </top>
     <center>
-        <GridPane fx:id="calendarGrid" gridLinesVisible="true">
+        <GridPane fx:id="calendarGrid" gridLinesVisible="true" style="-fx-background-color: #e6f0f2;">
         </GridPane>
     </center>
     <right>
-        <VBox prefWidth="250.0" spacing="10.0" BorderPane.alignment="CENTER">
+        <VBox prefWidth="250.0" spacing="10.0" style="-fx-background-color: #e6f0f2;" BorderPane.alignment="CENTER">
             <children>
-                <Label text="Ringkasan Bulan Ini">
+                <Label text="Ringkasan Bulan Ini" textFill="#1e3d59">
                     <font><Font name="System Bold" size="16.0" /></font>
                 </Label>
-                <ListView fx:id="summaryListView" />
+                <ListView fx:id="summaryListView" style="-fx-background-radius: 15; -fx-border-radius: 15;" />
             </children>
             <padding><Insets bottom="10.0" left="10.0" right="10.0" top="10.0" /></padding>
         </VBox>
     </right>
     <bottom>
-        <HBox alignment="CENTER_LEFT" BorderPane.alignment="CENTER_LEFT">
+        <HBox alignment="CENTER_LEFT" style="-fx-background-color: #1e3d59;" BorderPane.alignment="CENTER_LEFT">
             <children>
-                <Button mnemonicParsing="false" onAction="#handleBack" text="Kembali" />
+                <Button mnemonicParsing="false" onAction="#handleBack" style="-fx-background-radius: 15;" text="Kembali" />
             </children>
             <padding><Insets bottom="10.0" left="10.0" /></padding>
         </HBox>
