--- a/src/main/resources/com/example/uaspbo_habittracker_27bulanmei/Login.fxml
+++ b/src/main/resources/com/example/uaspbo_habittracker_27bulanmei/Login.fxml
@@ -9,17 +9,17 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="300.0" spacing="15.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.uaspbo_habittracker_27bulanmei.controller.LoginController">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="300.0" spacing="15.0" style="-fx-background-color: #e6f0f2;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.uaspbo_habittracker_27bulanmei.controller.LoginController">
     <children>
-        <Label text="Selamat Datang!">
+        <Label text="Selamat Datang!" textFill="#1e3d59">
             <font>
                 <Font name="System Bold" size="24.0" />
             </font>
         </Label>
-        <TextField fx:id="usernameField" promptText="Username" />
-        <PasswordField fx:id="passwordField" promptText="Password" />
+        <TextField fx:id="usernameField" promptText="Username" style="-fx-background-radius: 15;" />
+        <PasswordField fx:id="passwordField" promptText="Password" style="-fx-background-radius: 15;" />
         <Label fx:id="errorLabel" textFill="RED" />
-        <Button fx:id="signInButton" mnemonicParsing="false" onAction="#handleSignIn" prefWidth="250.0" text="Sign In" />
+        <Button fx:id="signInButton" mnemonicParsing="false" onAction="#handleSignIn" prefWidth="250.0" style="-fx-background-color: #1e3d59; -fx-background-radius: 15;" text="Sign In" textFill="WHITE" />
         <Hyperlink onAction="#handleGoToSignUp" text="Belum punya akun? Daftar di sini" />
     </children>
     <padding>
