--- a/src/main/resources/com/example/uaspbo_habittracker_27bulanmei/HabitTracker.fxml
+++ b/src/main/resources/com/example/uaspbo_habittracker_27bulanmei/HabitTracker.fxml
@@ -55,7 +55,7 @@
               style="-fx-padding: 0 10 20 10;">
             <children>
                 <Button onAction="#handleViewHistory" style="-fx-background-radius: 15;" text="Lihat Riwayat" textFill="#1e3d59" />
-                <Button onAction="#handleViewStatistics" style="-fx-background-radius: 15;" text="Lihat Statistik" />
+                <Button onAction="#handleViewStatistics" style="-fx-background-radius: 15;" text="Lihat Progres" />
                 <Region HBox.hgrow="ALWAYS" />
                 <Button onAction="#handleLogout" style="-fx-background-radius: 15;" text="Logout" textFill="RED" />
             </children>
